<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="home_str">Home</string>
    <string name="fav_str">Favourites</string>
    <string name="alerts_str">Alerts</string>
    <string name="settings_str">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="location">Location</string>
    <string name="temprature">Temprature</string>
    <string name="gps">GPS</string>
    <string name="another_location">Another Location</string>
    <string name="calvin">Calvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_per_second">Meter/Second</string>
    <string name="mile_per_hour">Mile/Hour</string>
    <string name="kalvin">Kalvin</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notificatiom">Notification</string>
    <string name="dismis">Dismis</string>
    <string name="alerts">Alerts</string>
</resources>